updated admin panel, menu, & translation

--- a/templates/administration/list/list_user.html
+++ b/templates/administration/list/list_user.html
@@ -16,7 +16,7 @@
     <!-- Main content -->
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title">{% translate "Last 10 requested photoshoot session" %}</h3>
+            <h3 class="card-title">{% translate "User List" %}</h3>
         </div>
         <!-- /.card-header -->
         <div class="card-body">
