--- a/templates/client/client_view/index.html
+++ b/templates/client/client_view/index.html
@@ -12,6 +12,6 @@
         <h2 class="alert-info" id="info" style="text-align: center; margin-top: auto">
             Hi, {{ user.first_name }}. You don't have any photos uploaded yet.</h2>
         <div class="alert-warning" style="text-align: center; font-size: medium">
-            Wanna book me ? Click <a href="{% url 'client:book_me' %}">here</a> </div>
+            Wanna book me ? Click <a href="{% url 'homepage:services_offered' %}">here</a> </div>
     {% endif %}
 {% endblock body %}
