--- a/templates/administration/list/list_album_client.html
+++ b/templates/administration/list/list_album_client.html
@@ -50,12 +50,14 @@
                                     <i class="fas fa-eye"></i>&nbsp;Show
                                 </button>
                             </a>
+                            {% if user.is_admin %}
                             <a href="{% url 'administration:delete_client_album' album.pk %}"
                                onClick="return confirm('Are you sure you want to delete this item?');">
                                 <button class="btn btn-danger">
                                     <i class="fas fa-trash"></i>&nbsp;Delete
                                 </button>
                             </a>
+                            {% endif %}
                         </td>
                     </tr>
                 {% endfor %}
