--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -145,12 +145,12 @@
             <!-- Sidebar user panel (optional) -->
             <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                 <div class="image">
-                    {% if user.profile_picture %}
-                        <img src="{{ user.profile_picture.url }}" class="img-circle elevation-2" alt="User Image">
+                    {% if user.profile_photo %}
+                        <img src="{{ user.profile_photo.get_url }}" class="img-circle elevation-2" alt="User Image">
                     {% endif %}
                 </div>
                 <div class="info">
-                    <a href="" class="d-block">
+                    <a href="{{ profile_link }}" class="d-block">
                         {{ user.get_full_name }}
                     </a>
                 </div>
