--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -185,7 +185,7 @@
                             <i class="nav-icon fas fa-tachometer-alt"></i>
                             <p>
                                 {% translate "Dashboard" %}
-                                <i class="right fas fa-angle-right"></i>
+                                <i class="right fas fa-angle-left"></i>
                             </p>
                         </a>
                     </li>
